@@ -1,3 +1,15 @@
+2015-11-25  Gary Funck  <gary@intrepid.com>
+
+	* Makefile.am: Fix spelling.
+	* collectives/upc_coll_init.upc: Ditto.
+	* collectives/upc_coll_prefix_reduce.in: Ditto.
+	* include/gasp_upc.h: Ditto.
+	* portals4/gupcr_barrier.c: Ditto.
+	* portals4/gupcr_pts.h: Ditto.
+	* smp/upc_gum.c: Ditto.
+	* smp/upc_main.c: Ditto.
+	* smp/upc_pts.h: Ditto.
+
 2015-11-22  Gary Funck  <gary@intrepid.com>
 
 	* ax_prog_doxygen.m4: Fix spelling.
